--- a/package.json
+++ b/package.json
@@ -40,5 +40,13 @@
 			"last 1 firefox version",
 			"last 1 safari version"
 		]
+	},
+	"devDependencies": {
+		"@babel/core": "^7.12.10",
+		"@babel/preset-env": "^7.12.11",
+		"@babel/preset-react": "^7.12.10",
+		"@wojtekmaj/enzyme-adapter-react-17": "^0.4.1",
+		"babel-jest": "^26.6.3",
+		"enzyme": "^3.11.0"
 	}
 }
